<resources>
    <string name="app_name">iot_plot</string>

    <string name="title_activity_login">IOT Plot</string>
    <string name="login_sucess">"Přihlášení proběhlo úspěšně!"</string>
    <string name="invalid_address">Špatná adresa serveru</string>
    <string name="invalid_organization">Pole organizace nesmí být prázdné</string>
    <string name="invalid_token">Špatný token</string>
    <string name="login_failed">"Přihlášení nebylo úspěšné"</string>
    <string name="data_load_failed">"Nepodařilo se načíst hodnoty z databáze"</string>
    <string name="progress_login_text">Probíhá přihlašování…</string>
    <string name="login_text">Přihlášení</string>
    <string name="api_address_hint_text">Adresa serveru</string>
    <string name="organization_hint_text">Účet</string>
    <string name="token_hint_text">Přihlašovací token</string>
    <string name="save_login_text">Uložit přihlašovací údaje</string>
    <string name="reset_text">Reset</string>
    <string name="graph_choose">Výběr grafu</string>
    <string name="create_graph">Vytvořit graf</string>
    <string name="delete_graph">Smazat graf</string>
    <string name="show_graph">Zobrazit graf</string>
    <string name="bucket_spinner_text">Účet</string>
    <string name="location_spinner_text">Místo</string>
    <string name="device_spinner_text">Zařízení</string>
    <string name="measurement_spinner_text">Měření</string>
    <string name="time_from_text">Od</string>
    <string name="date_text">Datum</string>
    <string name="time_text">Čas</string>
    <string name="time_to_text">Do</string>
    <string name="save_graph_button">Uložit graf</string>
    <string name="graph_name">jméno grafu</string>
    <string name="graph_close_button">Zpět</string>
</resources>