<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pano9_dsc8274_dsc8282_z_rozhledny_boddanec_srgb" />

    <LinearLayout
        android:id="@+id/graph_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        tools:ignore="MissingConstraints">
        <Button
            style="@style/TextAppearance.MaterialComponents.Button"
            android:id="@+id/graph_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="11sp"
            android:layout_gravity="start"
            android:text="@string/graph_close_button" />
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/graph"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grap_chooser_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/graph_choose"
                    android:textColor="@color/black"
                    android:textSize="35sp" />

                <Spinner
                    android:id="@+id/graph_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/create_plot_button"
                        style="@style/TextAppearance.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:backgroundTint="@android:color/holo_green_light"
                        android:text="@string/create_graph"
                        android:textAllCaps="false"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/delete_plot_button"
                        style="@style/TextAppearance.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:backgroundTint="@android:color/holo_green_light"
                        android:text="@string/delete_graph"
                        android:textAllCaps="false"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/show_plot_button"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/show_graph"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_white"
                android:gravity="top|center"
                android:text="@string/app_name"
                android:textColor="@color/heavy_green"
                android:textSize="35sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/graph_creator_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@drawable/layout_bg"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/graph_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center_horizontal"
            android:hint="@string/graph_name"
            android:autofillHints="jméno grafu"/>

        <TextView
            android:id="@+id/bucket_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/bucket_spinner_text" />
        <Spinner
            android:id="@+id/bucket_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/bucket_spinner_text"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <TextView
            android:id="@+id/location_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/location_spinner_text" />
        <Spinner
            android:id="@+id/location_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/location_spinner_text"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <TextView
            android:id="@+id/device_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/device_spinner_text" />
        <Spinner
            android:id="@+id/device_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/device_spinner_text"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <TextView
            android:id="@+id/measurement_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/measurement_spinner_text" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <TextView
            android:id="@+id/time_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/time_from_text" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/date_from_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/date_text" />
            <EditText
                android:id="@+id/time_from_edit_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:text="@string/time_text" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <TextView
            android:id="@+id/time_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:text="@string/time_to_text" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/date_to_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/date_text" />
            <EditText
                android:id="@+id/time_to_edit_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:text="@string/time_text" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#bdc3c7"/>

        <Button
            style="@style/TextAppearance.MaterialComponents.Button"
            android:id="@+id/save_graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/save_graph_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>