<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:screenOrientation="portrait">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pano9_dsc8274_dsc8282_z_rozhledny_boddanec_srgb"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/login_progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/layout_bg"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/login_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:padding="25dp"
            android:gravity="top|center"
            android:text="@string/progress_login_text" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:foregroundGravity="center"
            tools:ignore="MissingConstraints">
        </ProgressBar>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/layout_bg">
                <TextView
                    android:id="@+id/login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:text="@string/login_text" />

                <EditText
                    android:id="@+id/api_address_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:gravity="center_horizontal"
                    android:hint="@string/api_address_hint_text"
                    android:autofillHints="api_address"/>

                <EditText
                    android:id="@+id/organization_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:gravity="center_horizontal"
                    android:hint="@string/organization_hint_text"
                    android:autofillHints="organization"/>

                <EditText
                    android:id="@+id/token_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:gravity="center_horizontal"
                    android:hint="@string/token_hint_text"
                    android:autofillHints="token"
                    />

                <CheckBox
                    android:id="@+id/save_login_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_login_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <Button
                        style="@style/TextAppearance.MaterialComponents.Button"
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:text="@string/login_text"
                        android:backgroundTint="@android:color/holo_green_light"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:id="@+id/header_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/heavy_green"
                android:textSize="35sp"
                android:gravity="top|center"
                android:background="@color/background_white"
                />
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>